<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Main Strings -->
    <string name="app_name">SI PANIC ALARM</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="launch_demo">Launch Demo</string>

    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_intro_next_button" tools:ignore="MissingTranslation">NEXT</string>
    <string name="app_intro_back_button" tools:ignore="MissingTranslation">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description" tools:ignore="MissingTranslation">graphics</string>


    <string name="FACEBOOK_APP_ID">2374128209542321</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">d7e75d5854a4f1025b17ee369fc1ec83</string>

    <string name="default_notification_channel_id">SiAlarm</string>


    <!-- 2nd Tab Group -->
    <string name="perms_intro1">This demonstrates the ability to request permission on any slide specified. Tap the button below to launch the demo.</string>
    <string name="perms_intro2">This demonstrates the ability to request permission on any slide specified, only it\'s using the second slide layout. Tap the button below to launch the demo.</string>
    <string name="tv_previous">Prev</string>
    <string name="tv_next">Next</string>
    <string name="tv_on_boarding_desc">Register</string>
    <string name="tv_register">Register</string>
    <string name="tv_add_contacts">Add friends</string>
    <string name="tv_send_alert">Send alert</string>
    <string name="tv_done">Done</string>
    <string name="tv_permissions">Permissions</string>
    <string name="write_your_username">Write your username</string>
    <string name="tv_ok">Ok</string>
    <string name="cancel">Cancel</string>
=    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last updated value</string>
    <string name="permission_rationale">Permission</string>
    <string name="permission_denied_explanation">Permission denied</string>
    <string name="settings">Settings</string>
    <string name="latitude_label">Latitude</string>
    <string name="sign_up">SIGN UP</string>
    <string name="txt_from_contacts">Add from contacts</string>
    <string name="txt_add_another">Add another contact</string>
    <string name="add_number">ADD NUMBER</string>
    <string name="alert_sent">Alert sent.</string>
    <string name="add_friend">Add friend</string>
    <string name="username">Username</string>
    <string name="my_profile">My Profile</string>
    <string name="notify_you_are_safe">Notify you are safe</string>
    <string name="history">History</string>
    <string name="language">Language</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="number_error">Could not find the number. You can try adding number manually.</string>
    <string name="email">Email</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="wardNo">Ward No.</string>
    <string name="tole">Tole</string>
    <string name="deviceNumber">Device Name</string>
    <string name="siAlarm">SI Alarm</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="search_hint_country">Search</string>
    <string name="returnToHome">Return to home</string>
    <string name="password">Password</string>
    <string name="add_device">Add device</string>
    <string name="deviceName">Device name</string>
    <string name="number">Number</string>


    <array name="state">
        <item>Province No. 1</item>
        <item>Province No. 2</item>
        <item>Province No. 3</item>
        <item>Gandaki Pradesh</item>
        <item>Province No. 5</item>
        <item>Karnali Pradesh</item>
        <item>Sudurpaschim Pradesh</item>
    </array>

    <array name="district">
        <item>Bhojpur</item>
        <item>Dhankuta</item>
        <item>Ilam</item>
        <item>Jhapa</item>
    </array>

    <string name="txt_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="txt_privacy_policy">Privacy Policy</string>

    <string name="terms_conditions">By continuing, you agree that you agree to our %1$s and %2$s</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_not_locked_text">Nothing should happen on this page, here for test purpose</string>
    <string name="activity_dialog_title">Forgot you Pincode?</string>
    <string name="activity_dialog_accept">OK</string>
    <string name="activity_dialog_decline">CANCEL</string>
    <string name="activity_dialog_content">Tap \'OK\' to log out, when you log back in you\'ll be able to create a new Pincode.\n\nIf you remember your Pincode, tap \'Cancel\' to go back.</string>
    <string name="activity_appcompat_message">I am a PinCompatActivity!</string>
    <string name="change_password">Change password</string>
    <string name="search">Search</string>

</resources>
