<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/wallpaper"
    >

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/br_on_boarding_bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:textColor="@color/color_blue_3cacd6"
            android:text="@string/tv_previous"
            android:textAllCaps="true"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_on_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/bg_round_8dp" />

            <ImageButton
                android:id="@+id/ib_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/bg_round_8dp" />

            <ImageButton
                android:id="@+id/ib_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/bg_round_8dp" />

            <ImageButton
                android:id="@+id/ib_messaging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/bg_round_8dp" />

            <ImageButton
                android:id="@+id/ib_permissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@null"
                android:padding="5dp"
                android:src="@drawable/bg_round_8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/tv_next"
            android:textAllCaps="true"
            android:textColor="@color/color_blue_3cacd6" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_description"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom">

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            android:rotation="-5"
            android:src="@drawable/signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc_body"/>

        <TextView
            android:id="@+id/tv_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/app_name" />

        <Button
            android:id="@+id/btn_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_desc_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_rounded"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="Grant permissions"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_desc_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_desc_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="This is text! How are you?" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
